substrate/frame/support/test/tests/pallet_ui/storage_info_unsatisfied_nmap.stderr
error[E0277]: the trait bound `Bar: MaxEncodedLen` is not satisfied
  --> tests/pallet_ui/storage_info_unsatisfied_nmap.rs:29:12
   |
29 |     #[pallet::pallet]
   |               ^^^^^^ the trait `MaxEncodedLen` is not implemented for `Bar`
   |
   = help: the following other types implement trait `MaxEncodedLen`:
             bool
             i8
             i16
             i32
             i64
             i128
             u8
             u16
           and $N others
   = note: required for `NMapKey<frame_support::Twox64Concat, Bar>` to implement `KeyGeneratorMaxEncodedLen`
   = note: required for `frame_support::pallet_prelude::StorageNMap<_GeneratedPrefixForStorageFoo<T>, NMapKey<frame_support::Twox64Concat, Bar>, u32>` to implement `StorageInfoTrait`
